<resources>
    <string name="app_name">Vote On Office</string>

    <string name="action_settings">Settings</string>

    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_error_title">Sorry</string>

    <string name="empty_ribots">There aren\'t any ribots</string>
    <string name="error_loading_ribots">There was a problem loading the ribots</string>

    <string name="progress_bar_wait">Please wait</string>

    <string name="error_need_email">Email is required</string>
    <string name="error_valid_email">Please enter a valid email</string>
    <string name="error_need_password">Password is required</string>
    <string name="error_password_lenght">Minimum lenght of password should be 6</string>
    <string name="error_already_registered">You are already registered </string>
    <string name="registration_success">Successful Registration</string>
    <string name="error_need_title">Please enter a Title"</string>
    <string name="error_need_variant">Add variant for creating vote</string>
    <string name="message_vote_created">Vote Created</string>

    <string name="login">Login</string>
    <string name="don_t_have_account_sign_up">Don\'t have account? Sign Up</string>
    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="for_creating_vote_add_title_and_some_variants">For creating vote add title and some variants</string>
    <string name="description">Description</string>
    <string name="add_variant">Add Variant</string>
    <string name="create_vote">Create Vote</string>
    <string name="add_vote">Add vote</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="vote">Vote</string>
    <string name="edit_user_role">Edit User role</string>
    <string name="change_role">Change role</string>
    <string name="error_select_var">Please select variant</string>
    <string name="vote_result">Result of vote</string>
    <string name="error_lower_case">Password must contain at least one letter in lower case</string>
    <string name="error_upper_case">Password must contain at least one letter in upper case</string>
    <string name="error_number_contain">Password must contain at least one number</string>
    <string name="error_letter_contain">Password must contain at least one number and at least one letter</string>
    <string name="error_get_data">Error getting data!!!</string>
    <string name="no_votes">No one voted yet</string>


</resources>
