<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center"
            >

            <EditText
                android:id="@+id/editTextEmailsignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:gravity="center"
                android:inputType="textEmailAddress"
                android:paddingBottom="16dp"
                />

            <EditText
                android:id="@+id/editTextPasswordsignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingBottom="16dp"
                android:gravity="center"
                />

            <Button
                android:id="@+id/buttonSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="6dp"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                />

            <TextView
                android:id="@+id/textViewLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/already_have_an_account_login"
                android:gravity="center"
                />
        </LinearLayout>


        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone" />




    </RelativeLayout>


</LinearLayout>