<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LogInActivity" >



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="75dp"
            android:padding="32dp"
            >

            <EditText
                android:id="@+id/editTextEmail"
                android:textSize="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingBottom="16dp"
                android:lineSpacingExtra="8sp"
                />

            <EditText
                android:id="@+id/editTextPassword"
                android:textSize="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingBottom="16dp"
                android:lineSpacingExtra="8sp"
                />

            <Button
                android:id="@+id/buttonLogin"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login"
                android:textAllCaps="false"
                android:background="@color/tangerine"

                />

            <TextView
                android:id="@+id/textViewSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/don_t_have_account_sign_up"
                android:gravity="center"
                />
        </LinearLayout>


        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone" />




    </RelativeLayout>


</LinearLayout>